
icon:check[] Elasticsearch: The error logging has been enhanced. More detailed information will be logged if an index can't be created.

icon:check[] UI: Fixed potential encoding issues in the UI on systems which are not using the UTF-8 default character set.

[[v0.21.3]]
== 0.21.3 (19.06.2018)

icon:check[] GraphQL: Fixed a bug that caused an error when multiple queries where executed concurrently.

icon:check[] GraphQL: The language fallback handling for node reference fields has been enhanced. The language of the node will now be utilized when no language fallback has been specified.

icon:check[] GraphQL: The language fallback handling has been enhanced. The language fallback will now automatically be passed along to load nested fields.

icon:check[] GraphQL: The link resolving of html and string fields has been updated. Previously the language of the node which contained the field was not taken into account while resolving mesh links in these fields.

[[v0.21.2]]
== 0.21.2 (13.06.2018)

icon:check[] Elasticsearch: A compatibility issue with Elasticsearch instances which were hosted on Amazon AWS has been fixed. Previously the check for installed ES plugins failed.

[[v0.21.1]]
== 0.21.1 (28.05.2018)

icon:plus[] Elasticsearch: It is now possible to configure custom mappings for binary fields. Currently only the `mimeType` and `file.content` fields can be mapped. An example for this mapping can be found in the documentation.

[[v0.21.0]]
== 0.21.0 (27.05.2018)

icon:bullhorn[] Binary Search

[quote]
____
This version of Gentics Mesh introduces the __Binary Search support__.

The https://www.elastic.co/guide/en/elasticsearch/plugins/6.2/ingest-attachment.html[Elasticsearch Ingest Attachment Plugin] will be utilized if possible to process text file uploads (PDF, DOC, DOCX).
A detailed description of this feature can be found in our https://getmesh.io/docs/beta/elasticsearch.html#_binarysearch[Elasticsearch Documentation].
____
